<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/show_all_item"
        android:title="@string/filter_menu_show_all"
        android:checkable="true"
        tools:checked="true"/>
    <item
        android:id="@+id/show_hospital_item"
        android:title="@string/filter_menu_show_hospital"
        android:checkable="true"/>
    <item
        android:id="@+id/show_mental_health_item"
        android:title="@string/filter_menu_show_mental_health"
        android:checkable="true"/>
    <item
        android:id="@+id/show_unknown_item"
        android:title="@string/filter_menu_show_unknown"
        android:checkable="true"/>
</menu>
