<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hospital"
            type="com.sh.techtest.hospitals.ui.DisplayHospital" />
    </data>

    <LinearLayout
        android:id="@+id/location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:showIn="@layout/fragment_hospital_info">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hospital_info_contact_title"
            android:layout_marginLeft="8dp" />


        <com.sh.techtest.utils.InfoListItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fieldStr="@string/hospital_info_phone"
            app:valueStr="@{hospital.phone}"/>

        <com.sh.techtest.utils.InfoListItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fieldStr="@string/hospital_info_email"
            app:valueStr="@{hospital.email}"/>

        <com.sh.techtest.utils.InfoListItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fieldStr="@string/hospital_info_website"
            app:valueStr="@{hospital.website}"/>

        <com.sh.techtest.utils.InfoListItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fieldStr="@string/hospital_info_fax"
            app:valueStr="@{hospital.fax}"/>

    </LinearLayout>
</layout>